--- a/src/pages/StartPage.css
+++ b/src/pages/StartPage.css
@@ -319,7 +319,7 @@
     width: 100%;
     height: auto;
     aspect-ratio: 1;
-    max-width: 70px;
+    max-width: 55px;
   }
 
   html,
